--- a/asp_mvc__2/Web.config
+++ b/asp_mvc__2/Web.config
@@ -18,7 +18,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" defaultUrl="~/Home/Welcome"> </forms>
+      <forms loginUrl="~/Account/Login" defaultUrl="~/Home/Welcome">
+        
+      </forms>
     </authentication>
   </system.web>
   <runtime>
